[gd_scene load_steps=9 format=3 uid="uid://ce73od5eae84"]

[ext_resource type="Script" path="res://scripts/shop.gd" id="1_ltbus"]
[ext_resource type="Texture2D" uid="uid://cg4sr48cvfle5" path="res://assets/shop.PNG" id="1_qnws0"]
[ext_resource type="Script" path="res://scripts/close_button.gd" id="3_orbys"]
[ext_resource type="Texture2D" uid="uid://c7kj4dstf2qi3" path="res://assets/sold-out-symbol.PNG" id="4_wm0gd"]
[ext_resource type="Script" path="res://scenes/sea_sauce_cross.gd" id="5_7g4ed"]
[ext_resource type="Script" path="res://scenes/sand_cross.gd" id="6_dtu5a"]
[ext_resource type="Script" path="res://scenes/ink_cross.gd" id="7_yw4th"]
[ext_resource type="Script" path="res://scenes/moon_cross.gd" id="8_j2n76"]

[node name="Shop" type="Control"]
layout_mode = 3
anchor_left = 0.013
anchor_right = 0.482
anchor_bottom = 0.593
offset_left = -10.976
offset_right = 600.736
offset_bottom = 276.736
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ltbus")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(491, 352)
scale = Vector2(0.416102, 0.407317)
texture = ExtResource("1_qnws0")

[node name="CloseButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 865.0
offset_top = 65.0
offset_right = 937.0
offset_bottom = 140.0
script = ExtResource("3_orbys")

[node name="SeaSauceCross" type="Sprite2D" parent="."]
visible = false
position = Vector2(469, 350)
scale = Vector2(0.378154, 0.406707)
texture = ExtResource("4_wm0gd")
script = ExtResource("5_7g4ed")

[node name="SandCross" type="Sprite2D" parent="."]
visible = false
position = Vector2(462, 542)
scale = Vector2(0.378154, 0.406707)
texture = ExtResource("4_wm0gd")
script = ExtResource("6_dtu5a")

[node name="InkCross" type="Sprite2D" parent="."]
visible = false
position = Vector2(808, 354)
scale = Vector2(0.378154, 0.406707)
texture = ExtResource("4_wm0gd")
script = ExtResource("7_yw4th")

[node name="MoonCross" type="Sprite2D" parent="."]
visible = false
position = Vector2(809, 545)
scale = Vector2(0.378154, 0.406707)
texture = ExtResource("4_wm0gd")
script = ExtResource("8_j2n76")

[node name="deepPurchaseButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 121.0
offset_top = 120.0
offset_right = 155.0
offset_bottom = 137.0
metadata/_edit_lock_ = true

[node name="inkPurchaseButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 243.0
offset_top = 109.0
offset_right = 277.0
offset_bottom = 126.0
metadata/_edit_lock_ = true

[node name="sandPurchaseButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 122.0
offset_top = 184.0
offset_right = 155.0
offset_bottom = 201.0
metadata/_edit_lock_ = true

[node name="moonPurchaseButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 245.0
offset_top = 190.0
offset_right = 278.0
offset_bottom = 204.0
metadata/_edit_lock_ = true

[connection signal="pressed" from="CloseButton" to="CloseButton" method="_on_pressed"]
